--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -193,6 +193,12 @@
                     <span class="nav-badge" id="analyticsPlanBadge"
                         style="background: linear-gradient(135deg, #8b5cf6, #6366f1); font-size: 9px;">PRO+</span>
                 </a>
+                <a class="nav-item" data-section="showcase" id="navShowcase">
+                    <i class="bi bi-shop-window"></i>
+                    My Showcase
+                    <span class="nav-badge" id="showcasePlanBadge"
+                        style="background: linear-gradient(135deg, #eab308, #f59e0b); font-size: 9px;">ENT</span>
+                </a>
                 <a class="nav-item" data-section="earnings">
                     <i class="bi bi-wallet-fill"></i>
                     Earnings
@@ -703,6 +709,93 @@
                 </div>
             </section>
 
+            <!-- My Showcase Section (Enterprise Only) -->
+            <section class="section" id="sectionShowcase">
+                <div class="page-header">
+                    <h1 class="page-title">
+                        <i class="bi bi-shop-window"></i> My Showcase
+                        <span class="badge" id="showcaseHeaderBadge"
+                            style="background: linear-gradient(135deg, #eab308, #f59e0b); font-size: 12px; padding: 4px 10px; border-radius: 12px; margin-left: 8px;">ENTERPRISE</span>
+                    </h1>
+                    <div class="header-actions">
+                        <button class="btn btn-primary" id="addPartBtn" onclick="openAddPartModal()">
+                            <i class="bi bi-plus-lg"></i> Add Part
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Upgrade Prompt (shown for non-Enterprise) -->
+                <div id="showcaseUpgradePrompt" class="upgrade-prompt" style="display: none;">
+                    <div class="upgrade-content">
+                        <i class="bi bi-shop-window" style="font-size: 48px; color: #eab308;"></i>
+                        <h2>Unlock Parts Showcase</h2>
+                        <p>Upgrade to Enterprise to showcase your parts directly to customers. Get instant orders
+                            without waiting for requests!</p>
+                        <div class="upgrade-features">
+                            <div class="feature"><i class="bi bi-check-circle-fill"></i> Showcase unlimited parts</div>
+                            <div class="feature"><i class="bi bi-check-circle-fill"></i> Featured on customer app home
+                            </div>
+                            <div class="feature"><i class="bi bi-check-circle-fill"></i> Instant orders (no bidding)
+                            </div>
+                            <div class="feature"><i class="bi bi-check-circle-fill"></i> Analytics on views & orders
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-lg" onclick="switchSection('subscription')">
+                            <i class="bi bi-arrow-up-circle"></i> Upgrade to Enterprise
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Showcase Content (shown for Enterprise) -->
+                <div id="showcaseContent" style="display: none;">
+                    <!-- Stats Summary -->
+                    <div class="stats-grid" style="margin-bottom: 24px;">
+                        <div class="stat-card">
+                            <div class="stat-icon"><i class="bi bi-box-seam"></i></div>
+                            <div class="stat-info">
+                                <div class="stat-value" id="showcaseTotalParts">0</div>
+                                <div class="stat-label">Total Parts</div>
+                            </div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon" style="background: linear-gradient(135deg, #10b981, #059669);"><i
+                                    class="bi bi-check-circle"></i></div>
+                            <div class="stat-info">
+                                <div class="stat-value" id="showcaseActiveParts">0</div>
+                                <div class="stat-label">Active</div>
+                            </div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon" style="background: linear-gradient(135deg, #6366f1, #8b5cf6);"><i
+                                    class="bi bi-eye"></i></div>
+                            <div class="stat-info">
+                                <div class="stat-value" id="showcaseTotalViews">0</div>
+                                <div class="stat-label">Total Views</div>
+                            </div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon" style="background: linear-gradient(135deg, #f59e0b, #eab308);"><i
+                                    class="bi bi-cart-check"></i></div>
+                            <div class="stat-info">
+                                <div class="stat-value" id="showcaseTotalOrders">0</div>
+                                <div class="stat-label">Orders</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Parts Grid -->
+                    <div id="showcasePartsGrid" class="requests-grid">
+                        <div class="empty-state" style="grid-column: 1/-1; text-align: center; padding: 60px 20px;">
+                            <i class="bi bi-box-seam"
+                                style="font-size: 48px; color: var(--text-muted); margin-bottom: 16px;"></i>
+                            <h4 style="margin: 0 0 8px;">No parts yet</h4>
+                            <p style="color: var(--text-secondary);">Click "Add Part" to showcase your first part to
+                                customers!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Earnings Section -->
             <section class="section" id="sectionEarnings">
                 <div class="page-header">
@@ -1116,6 +1209,88 @@
             </div>
             <div class="shortcuts-footer">
                 <button class="btn btn-primary" onclick="closeKeyboardShortcuts()">Got it</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add/Edit Part Modal -->
+    <div class="modal-overlay" id="addPartModal">
+        <div class="modal" style="max-width: 600px;">
+            <div class="modal-header">
+                <h3 id="partModalTitle"><i class="bi bi-plus-circle"></i> Add Part to Showcase</h3>
+                <button class="modal-close" onclick="closeAddPartModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="addPartForm" onsubmit="submitAddPart(event)">
+                    <div class="form-group">
+                        <label>Part Title *</label>
+                        <input type="text" class="form-control" id="partTitle" placeholder="e.g., BMW E90 Headlight"
+                            required>
+                    </div>
+                    <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px;">
+                        <div class="form-group">
+                            <label>Car Make *</label>
+                            <input type="text" class="form-control" id="partCarMake" placeholder="e.g., BMW" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Car Model</label>
+                            <input type="text" class="form-control" id="partCarModel"
+                                placeholder="e.g., 3 Series (E90)">
+                        </div>
+                    </div>
+                    <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 16px;">
+                        <div class="form-group">
+                            <label>Condition *</label>
+                            <select class="form-control" id="partCondition" required>
+                                <option value="used">Used</option>
+                                <option value="new">New</option>
+                                <option value="refurbished">Refurbished</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Price (QAR) *</label>
+                            <input type="number" class="form-control" id="partPrice" placeholder="500" required min="1">
+                        </div>
+                        <div class="form-group">
+                            <label>Price Type</label>
+                            <select class="form-control" id="partPriceType">
+                                <option value="fixed">Fixed Price</option>
+                                <option value="negotiable">Negotiable</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px;">
+                        <div class="form-group">
+                            <label>Warranty (days)</label>
+                            <input type="number" class="form-control" id="partWarranty" placeholder="0" value="0"
+                                min="0">
+                        </div>
+                        <div class="form-group">
+                            <label>Quantity</label>
+                            <input type="number" class="form-control" id="partQuantity" placeholder="1" value="1"
+                                min="1">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Description</label>
+                        <textarea class="form-control" id="partDescription" rows="3"
+                            placeholder="Additional details about the part..."></textarea>
+                    </div>
+                    <!-- Current images preview (shown during edit) -->
+                    <div id="currentImagesPreview" class="form-group" style="display: none;"></div>
+                    <div class="form-group">
+                        <label>Photos (up to 5)</label>
+                        <input type="file" class="form-control" id="partImages" accept="image/*" multiple>
+                        <small style="color: var(--text-muted);">JPEG, PNG, WebP - Max 5MB each</small>
+                    </div>
+                    <div class="modal-footer"
+                        style="margin-top: 20px; display: flex; gap: 12px; justify-content: flex-end;">
+                        <button type="button" class="btn btn-outline" onclick="closeAddPartModal()">Cancel</button>
+                        <button type="submit" class="btn btn-primary" id="submitPartBtn">
+                            <i class="bi bi-plus-lg"></i> Add Part
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
