Implement Qatar Premium Theme - Complete Rebrand
Color Palette:
- Primary: Qatar Maroon (#8D1B3D)
- Accent: Gold (#C9A227)
- Background: White/Light gray

Updated Files:
- design-tokens.css: Core variables
- garage-dashboard.css: Removed dark mode
- operations-dashboard.css: Qatar palette
- customer-dashboard.css: Qatar palette
- admin-dashboard.css: Qatar palette
- driver.css: Qatar palette
- All HTML files: Updated inline colors
- All JS files: Updated dynamic colors
- Mobile theme.ts: Single theme
- Mobile ThemeContext.tsx: No dark toggle

Brand:
- New Qatar maroon + gold logo
- Removed dark mode toggle
- Unified premium experience

--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -164,7 +164,7 @@
     <div class="modal-overlay" id="orderDetailModal">
         <div class="modal" style="max-width: 600px;">
             <div class="modal-header"
-                style="background: linear-gradient(135deg, #6366f1, #8b5cf6); color: white; border-radius: 16px 16px 0 0; padding: 20px;">
+                style="background: linear-gradient(135deg, #8D1B3D, #A82050); color: white; border-radius: 16px 16px 0 0; padding: 20px;">
                 <div>
                     <h3 style="margin: 0; display: flex; align-items: center; gap: 10px;">
                         <i class="bi bi-box-seam"></i> Order Details
@@ -729,7 +729,7 @@
             <section class="section" id="sectionProfile">
                 <!-- Enhanced Profile Header -->
                 <div
-                    style="background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 50%, #a855f7 100%); border-radius: 20px; padding: 32px; margin-bottom: 24px; color: white; position: relative; overflow: hidden;">
+                    style="background: linear-gradient(135deg, #8D1B3D 0%, #A82050 50%, #C9A227 100%); border-radius: 20px; padding: 32px; margin-bottom: 24px; color: white; position: relative; overflow: hidden;">
                     <div
                         style="position: absolute; top: -50px; right: -50px; width: 200px; height: 200px; background: rgba(255,255,255,0.1); border-radius: 50%;">
                     </div>
@@ -787,7 +787,7 @@
                         <div class="profile-card-header"
                             style="padding: 16px 20px; border-bottom: 1px solid var(--border); display: flex; align-items: center; gap: 12px;">
                             <div
-                                style="width: 40px; height: 40px; background: linear-gradient(135deg, #6366f1, #8b5cf6); border-radius: 10px; display: flex; align-items: center; justify-content: center; color: white;">
+                                style="width: 40px; height: 40px; background: linear-gradient(135deg, #8D1B3D, #A82050); border-radius: 10px; display: flex; align-items: center; justify-content: center; color: white;">
                                 <i class="bi bi-person"></i>
                             </div>
                             <h3 style="margin: 0; font-size: 16px;">Account Details</h3>
