--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -588,7 +588,7 @@
                         </div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-icon" style="background: linear-gradient(135deg, #8b5cf6, #7c3aed);">
+                        <div class="stat-icon" style="background: linear-gradient(135deg, #A82050, #7c3aed);">
                             <i class="bi bi-person-check"></i>
                         </div>
                         <div class="stat-content">
@@ -775,7 +775,7 @@
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon" style="background: linear-gradient(135deg, #6366f1, #8b5cf6);">
+                    <div class="stat-icon" style="background: linear-gradient(135deg, #8D1B3D, #A82050);">
                         <i class="bi bi-hourglass-split"></i>
                     </div>
                     <div class="stat-content">
