--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -12,6 +12,8 @@
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/garage-dashboard.css">
+    <!-- Leaflet CSS for GPS Location Picker -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
 <body>
@@ -1289,6 +1291,8 @@
     </div>
 
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+    <!-- Leaflet JS for GPS Location Picker -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <!-- Shared JS utilities (must come before module JS) -->
     <script src="js/shared/utils.js"></script>
     <script src="js/shared/toast.js"></script>
