chore: self-host leaflet and socket.io dependencies
- Downloaded Leaflet 1.9.4 and Socket.IO 4.6.0 to public/lib/
- Updated garage-dashboard.html, customer-dashboard.html, and driver-app/index.html to use local paths
- Removed dependency on unpkg.com and cdn.socket.io to fix Tracking Prevention errors

--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -11,8 +11,8 @@
         rel="stylesheet">
     <link href="/assets/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <!-- Leaflet Maps for Driver Tracking -->
-    <link rel="stylesheet" href="/assets/leaflet/leaflet.css" />
-    <script src="/assets/leaflet/leaflet.js"></script>
+    <link rel="stylesheet" href="/lib/leaflet/leaflet.css" />
+    <script src="/lib/leaflet/leaflet.js"></script>
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
 
