--- a/public/driver-app/index.html
+++ b/public/driver-app/index.html
@@ -23,7 +23,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/bootstrap-icons/bootstrap-icons.css">
     <!-- Leaflet.js for Maps -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="">
+    <link rel="stylesheet" href="/lib/leaflet/leaflet.css" crossorigin="">
     <!-- Shared CSS -->
     <link rel="stylesheet" href="/css/shared.css">
     <link rel="stylesheet" href="/driver-app/css/driver.css">
@@ -346,7 +346,7 @@
     <!-- JavaScript -->
     <script src="/socket.io/socket.io.js"></script>
     <!-- Leaflet.js for Maps -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+    <script src="/lib/leaflet/leaflet.js" crossorigin=""></script>
     <!-- Shared JS utilities -->
     <script src="/js/shared/utils.js"></script>
     <script src="/js/shared/toast.js"></script>
