--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/garage-dashboard.css">
     <!-- Leaflet CSS for GPS Location Picker -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link rel="stylesheet" href="/lib/leaflet/leaflet.css" />
 </head>
 
 <body>
@@ -1290,9 +1290,9 @@
         </div>
     </div>
 
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+    <script src="/lib/socket.io/socket.io.min.js"></script>
     <!-- Leaflet JS for GPS Location Picker -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="/lib/leaflet/leaflet.js"></script>
     <!-- Shared JS utilities (must come before module JS) -->
     <script src="js/shared/utils.js"></script>
     <script src="js/shared/toast.js"></script>
